# saibo-trader-BOMS

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_TREND.md  SPECS.md  bot_config.py  build-lowmem.sh  build.sh  check_wallet_config.py  cli_dashboard.py  clob_live.py  clob_trades.py  dashboard_bridge.py  derive_and_update_keys.py  derive_keys.py  docker-compose.multi.yml  docker-compose.yml  fetch_balance.py  live_preflight.py  manual.md  polymarket_fees.py  prelive_lih_check.py  redeem_positions.py  requirements.txt  start.sh  start_bot.py  start_windows.ps1  status_bot.py  test_auth.py  test_json.py  test_sandbox.py
archive/: README.md
archive/dh-only/: .env.dh-only.example  README.md
deploy/: LIVE_READINESS.md  README.md
deploy/instances/example/: bot.env  compose.env
deploy/systemd/: polymarket-bot@.service.example
docker/: entrypoint.sh
docs/: LIH_VERSION.md  LIVE_LIH_CALL_CHAIN.md  LIVE_LIH_ORDER_FLOW.md  LIVE_SETUP.md  shadow_dual_strategies_flow.html  shadow_dual_strategies_flow.md
frontend/: Dockerfile  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/forgot-password/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/live/: route.ts
frontend/src/app/audit/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/dashboard/: BinancePriceChart.tsx  PmMarketPanel.tsx  PreflightBanner.tsx  PriceChart.tsx  TradingPanels.tsx
frontend/src/components/history/: TradeHistoryTable.tsx
frontend/src/components/layouts/: DashboardLayout.tsx
frontend/src/components/shared/: DemoBanner.tsx  GlassCard.tsx  PageContainer.tsx  PageHeader.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useLiveState.ts
frontend/src/lib/: auth.ts  botApi.ts  branding.ts  clobTrades.ts  coreStatus.ts  email.ts  inputSecurity.ts  ipGuard.ts  navigation.ts  strategyMode.ts  tradeLog.ts  tradeWindow.ts
reference_python_project/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  Makefile  README.md  config.py  docker-compose.yml  healthcheck.py  main.py  pyproject.toml  requirements.txt
reference_python_project/core/: binance_ws.py  dump_hedge_detector.py  edge_detector.py  market_utils.py  polymarket_client.py  polymarket_ws.py
reference_python_project/integration/: openclaw.py  telegram.py
reference_python_project/risk/: kelly.py  risk_manager.py
reference_python_project/scripts/: install.bat  install.sh  start.bat  start.sh
reference_python_project/tests/: test_bot.py
reference_python_project/utils/: dashboard.py  logger.py  retry.py
scripts/: _analyze_lih_breakdown.py  _analyze_lih_paper.py  _audit_live.py  _audit_shadow_logs.py  _check_clob_trades.py  _check_overnight.py  _check_server.py  _clear_stale_lih_open.py  _deploy_balance_fix.py  _deploy_leg1_lock_fix.py  _deploy_live_only.py  _deploy_redeem_leg1_fix.py  _deploy_shadow_log.py  _deploy_wallet_display_fix.py  _deploy_web_sync_fix.py  _diag_web_hedge.py  _diagnose_lih_entry.py  _emergency_stop.py  _emergency_stop_entries.py  _fix_funder_env.py  _fix_vps_funder.py  _hard_stop.py  _missed_ops.py  _nudge_resume.py  _post_deploy_standby.py  _preflight_live_test.py  _restart_bot_only.py  _resume_shadow.py  _shadow_since_boot.py  _step1_shadow_overnight.py  _sync_pause_state.py  _sync_positions_now.py  _verify_round_locks.py  _verify_standby.py  _verify_stop.py  _watch_test_round.py  apply_ip_blacklist.sh  block_ip.sh  disk_guard.sh  install_disk_guard_cron.sh  (+21 more)
trading-core/: CMakeLists.txt  conanfile.txt
trading-core/src/: main.cpp  test_hash.cpp  test_phase3.cpp  test_phase4.cpp
trading-core/src/exec/: EIP712Signer.cpp  EIP712Signer.h  OrderRouter.cpp  OrderRouter.h  keccak256.hpp
trading-core/src/feeds/: BinanceFeed.cpp  BinanceFeed.h  GammaClient.cpp  GammaClient.h  PolymarketFeed.cpp  PolymarketFeed.h
trading-core/src/model/: FairValueModel.cpp  FairValueModel.h
trading-core/src/risk/: KellySizer.cpp  KellySizer.h  RiskManager.cpp  RiskManager.h
trading-core/src/signals/: DumpHedgeDetector.cpp  DumpHedgeDetector.h  LatencyArbDetector.cpp  LatencyArbDetector.h  LegInHedgeDetector.cpp  LegInHedgeDetector.h  Signal.h
trading-core/src/state/: PaperStateStore.cpp  PaperStateStore.h  StateStore.cpp  StateStore.h
(+5 files in other folders)
