# ══════════════════════════════════════════════════════════════════════════════
#  POLYMARKET — by Genoshide | polymarket arbitrage script bot
#  pyproject.toml — project metadata + tooling configuration
# ══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "polymarket-arb-bot"
version         = "1.0.0"
description     = "Polymarket latency arbitrage bot — exploits ~2.7s Chainlink oracle lag"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
keywords        = ["polymarket", "arbitrage", "trading", "bot", "crypto", "defi"]

dependencies = [
    "py-clob-client>=0.34.0,<1.0.0",
    "websockets>=12.0,<14.0",
    "requests>=2.31.0,<3.0.0",
    "httpx[http2]>=0.25.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rich>=13.7.0,<15.0.0",
    "typing-extensions>=4.8.0,<5.0.0",
]

[project.scripts]
polymarket-bot    = "main:sync_main"
polymarket-health = "healthcheck:main"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length    = 100
src            = ["."]
exclude        = ["venv", ".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg
    "SIM117", # nested with
]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "integration", "risk", "utils"]

# ── Mypy (static type checker) ────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_configs    = true
exclude                = ["venv/", "tests/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
log_cli         = true
log_cli_level   = "WARNING"
filterwarnings  = ["ignore::DeprecationWarning"]
addopts         = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["."]
omit     = ["venv/*", "tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
